--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,5 @@ OPENAI_API_KEY="xxxxxx"
 DEFAULT_EMBED_BATCH_SIZE="1"
 BLOB_KEY="xxxxxxxxxxxxxxxxxxxx"
 BLOB_URL="https://storageaccountname.blob.core.windows.net"
+visionendpoint="https://cogname.cognitiveservices.azure.com/"
+visionkey="xxxxxxxxxxxxxxxx"
